# filesearch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  coverage.json  filesearch.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: ci.yml  release.yml
docs/: PRD.md  architecture-documentation.md  architecture.md  asset-inventory.md  backlog.md  bmm-workflow-status.yaml  configuration-deployment-analysis.md  configuration.md  development-guide.md  epics.md  implementation-readiness-report-2025-11-13.md  index.md  nfr-assessment.md  plugin-development.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  state-management-analysis.md  test-design-system.md  test-review.md  ui-component-inventory.md  user_guide.md  validation-report-2025-11-13.md
docs/sprint-artifacts/: 1-1-project-setup-and-core-infrastructure.md  1-2-implement-modular-code-structure.md  epic-2-retro-2025-11-16.md  sprint-status.yaml  sprint-status.yaml.backup  tech-spec-epic-3.md  validation-report-2025-11-14-fixed.md  validation-report-2025-11-14.md  validation-report-2025-11-17-story-3-1.md  validation-report-2025-11-17-story-context.xml
scripts/: build_release.py  run.bat  run.sh  setup_venv_unix.sh  setup_venv_windows.bat
src/filesearch/: __init__.py  __main__.py  main.py
tests/integration/: test_context_menu.py  test_file_opening.py  test_integration_context_menu.py  test_open_containing_folder.py  test_plugin_system.py  test_search_performance.py  test_sorting_integration.py
tests/ui/: test_context_menu.py  test_results_view.py  test_storage_tab.py  test_ui_context_menu.py
tests/unit/: test_config_manager.py  test_context_menu.py  test_context_menu_open_with.py  test_example_plugin.py  test_exceptions.py  test_file_utils.py  test_file_utils_operations.py  test_highlight_engine.py  test_main.py  test_main_window.py  test_plugin_base.py  test_plugin_manager.py  test_runtime_paths.py  test_search_controls.py  test_search_engine.py  test_security_manager.py  test_settings_dialog.py  test_sidebar_widget.py  test_sort_engine.py  test_storage_analyzer.py  (+2 more)
(+94 files in other folders)
